# tensor

./: .clang-format  .clang-tidy  .cppcheck  .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  COPYRIGHT  INSTALL.md  LICENSE  Makefile.am  README  README.md  README_CMake  Readme.md  autogen.sh  configure.ac  doxygen.cfg  index.html  params.json
essl_lapack/: Makefile.am  make32.inc  make64.inc  make6464.inc
include/: CMakeLists.txt  Makefile.am  config.h.cmake.in  config.h.in
include/mps/: cmpdo.h  cmpo.h  cmps.h  dmrg.h  hamiltonian.h  itebd.h  mp_base.h  mpdo.h  mpo.h  mps.h  mps_algorithms.h  quantum.h  rmpdo.h  rmpo.h  rmps.h  time_evolve.h  tools.h
include/tensor/: arpack.h  arpack_d.h  arpack_z.h  cblas.h  clapack.h  config.h.cmake.in  config.h.in  exceptions.h  fftw.h  flags.h  gen.h  indices.h  initializer.h  io.h  jobs.h  linalg.h  map.h  numbers.h  rand.h  ranges.h  refcount.h  sdf.h  sparse.h  tensor.h  tensor_blas.h  tensor_lapack.h  tools.h  traits.h  vector.h
profile/: CMakeLists.txt  benchmark.py  benchmark_numpy.py  mytee.cc  operators.h  prof_vector.cc  profile.h  report.py
src/: CMakeLists.txt  Makefile.am  Makefile.inc
src/arpack/: CMakeLists.txt  arpack_d.cc  arpack_d_sym.cc  arpack_t.cc  arpack_t.hpp  arpack_z.cc  arpackf.h  caupp.h  ceupp.h  eigs_d.cc  eigs_map_d.cc  eigs_map_z.cc  eigs_sp_d.cc  eigs_sp_t.cc  eigs_sp_z.cc  eigs_sym.cc  eigs_sym_d.cc  eigs_sym_map_d.cc  eigs_sym_sp_d.cc  eigs_sym_sp_t.cc  eigs_sym_sp_z.cc  eigs_symz.cc  eigs_t.cc  eigs_tools.h  eigs_z.cc  gemv.cc  naupp.h  neupp.h  saupp.h  seupp.h
src/arpack-f2c/: CMakeLists.txt  cgetv0.f.c  cmout.f.c  cnaitr.f.c  cnapps.f.c  cnaup2.f.c  cnaupd.f.c  cneigh.f.c  cneupd.f.c  cngets.f.c  csortc.f.c  cstatn.f.c  cvout.f.c  dgetv0.f.c  dlaqrb.f.c  dmout.f.c  dnaitr.f.c  dnapps.f.c  dnaup2.f.c  dnaupd.f.c  dnconv.f.c  dneigh.f.c  dneupd.f.c  dngets.f.c  dsaitr.f.c  dsapps.f.c  dsaup2.f.c  dsaupd.f.c  dsconv.f.c  dseigt.f.c  dsesrt.f.c  dseupd.f.c  dsgets.f.c  dsortc.f.c  dsortr.f.c  dstatn.f.c  dstats.f.c  dstqrb.f.c  dvout.f.c  icnteq.f.c  (+44 more)
src/arpack-ng/: CMakeLists.txt  common.cc
src/compare/: CMakeLists.txt  ctensor_cdouble_all_equal.cc  ctensor_cdouble_e.cc  ctensor_cdouble_ne.cc  ctensor_ctensor_all_equal.cc  ctensor_ctensor_comparison.cc  ctensor_ctensor_e.cc  ctensor_ctensor_ne.cc  indices_comparisons.cc  indices_index_e.cc  indices_index_g.cc  indices_index_ge.cc  indices_index_l.cc  indices_index_le.cc  indices_index_ne.cc  indices_indices_e.cc  indices_indices_g.cc  indices_indices_ge.cc  indices_indices_l.cc  indices_indices_le.cc  indices_indices_ne.cc  rtensor_double_all_equal.cc  rtensor_double_e.cc  rtensor_double_g.cc  rtensor_double_ge.cc  rtensor_double_l.cc  rtensor_double_le.cc  rtensor_double_ne.cc  rtensor_rtensor_all_equal.cc  rtensor_rtensor_comparison.cc  rtensor_rtensor_e.cc  rtensor_rtensor_g.cc  rtensor_rtensor_ge.cc  rtensor_rtensor_l.cc  rtensor_rtensor_le.cc  rtensor_rtensor_ne.cc
src/eigs/: CMakeLists.txt  eigs_d.cc  eigs_map_d.cc  eigs_map_z.cc  eigs_sp_d.cc  eigs_sp_z.cc  eigs_sym_d.cc  eigs_sym_map_d.cc  eigs_sym_map_z.cc  eigs_sym_sp_d.cc  eigs_sym_sp_z.cc  eigs_sym_z.cc  eigs_z.cc  gemv.cc
src/fftw/: CMakeLists.txt  fftshift.cc  fftw.cc  fftw_common.cc  fftw_common.hpp  fftw_inplace.cc
src/indices/: CMakeLists.txt  booleans.cc  booleans_and.cc  booleans_not.cc  booleans_or.cc  concat.cc  indices.cc  linspace.hpp  linspace_d.cc  linspace_z.cc  surrounding_dimensions.cc  to_tensor.cc  which.cc
src/linalg/: CMakeLists.txt  block_svd.hpp  block_svd_d.cc  block_svd_z.cc  cgs.cc  cgs_d.cc  cgs_map_d.cc  cgs_map_z.cc  cgs_sp_d.cc  cgs_sp_z.cc  cgs_z.cc  eig_d.cc  eig_power.cc  eig_power.hpp  eig_power_d.cc  eig_power_map_d.cc  eig_power_map_z.cc  eig_power_sp_d.cc  eig_power_sp_z.cc  eig_power_z.cc  eig_sym_d.cc  eig_sym_gen_d.cc  eig_sym_gen_z.cc  eig_sym_z.cc  eig_z.cc  expm_d.cc  expm_z.cc  find_blocks.hpp  solve_d.cc  solve_with_svd_d.cc  solve_with_svd_z.cc  solve_z.cc  svd_d.cc  svd_z.cc
src/primme/: CMakeLists.txt  primme_core.h  primme_d.cc  primme_z.cc
src/rand/: CMakeLists.txt  mt.h  rand.cc  rand32.cc  rand64.cc
src/sdf/: CMakeLists.txt  data_file.cc  delete_file.cc  file_exists.cc  idata_file.cc  isdir.cc  make_directory.cc  mkdir.cc  odata_file.cc  rename_file.cc  sdf_load.m  sdf_load_record.m
src/sparse/: CMakeLists.txt  full_d.cc  full_z.cc  mmult_sparse_tensor.h  mmult_sparse_tensor_d.cc  mmult_sparse_tensor_z.cc  mmult_tensor_sparse.h  mmult_tensor_sparse_d.cc  mmult_tensor_sparse_z.cc  (+19 more)
test/: Makefile.am  alloc_informer.cc  alloc_informer.h  loops.h  random_permutation.cc  random_unitary_d.cc  random_unitary_z.cc  slow_fold.cc  slow_mmult.cc  test_booleans.cc  test_fftw.cc  test_fold.cc  test_index.cc  test_itebd_base.cc  test_itebd_expected.cc  test_itebd_expected_slow.cc  test_itebd_itime.cc  test_kron.hpp  test_linalg_cgs.cc  test_linalg_eig.cc  test_linalg_eig_power.cc  test_linalg_eig_sym.cc  test_linalg_eigs.cc  test_linalg_expm.cc  test_linalg_solve.cc  test_linalg_svd.cc  test_main.cc  test_matrix.cc  test_mmult.cc  test_mps_canonical.cc  test_mps_correlation.cc  test_mps_expected.cc  test_mps_mps.cc  test_mps_norm.cc  test_mps_simplify.cc  test_mps_simplify_many.cc  test_quantum_fock.cc  test_quantum_spin.cc  test_rand.cc  test_refcount.cc  (+22 more)
tests/: CMakeLists.txt  Makefile.am  alloc_informer.cc  alloc_informer.h  loops.h  random_permutation.cc  random_unitary_d.cc  random_unitary_z.cc  slow_fold.cc  slow_mmult.cc  test_booleans.cc  test_dimensions.cc  test_fftw.cc  test_fold.cc  test_index.cc  test_indices.cc  test_indices_comparisons.cc  test_jobs.cc  test_kron.hpp  test_linalg_cgs.cc  test_linalg_eig.cc  test_linalg_eig_power.cc  test_linalg_eig_sym.cc  test_linalg_eigs.cc  test_linalg_eigs_gen.cc  test_linalg_expm.cc  test_linalg_find_blocks.cc  test_linalg_solve.cc  test_linalg_svd.cc  test_main.cc  test_matrix.cc  test_mmult.cc  test_rand.cc  test_range.cc  test_range_iterator.cc  test_refcount.cc  test_sdf.cc  test_sparse_base.cc  test_sparse_diag.cc  test_sparse_indices.cc  (+24 more)
www/: Makefile.am
(+644 files in other folders)
