
nobase_include_HEADERS = \
	tensor/arpack.h \
	tensor/arpack_d.h \
	tensor/arpack_z.h \
	tensor/detail/common.h \
	tensor/detail/functional.h \
	tensor/detail/io.hpp \
	tensor/detail/refcount.hpp \
	tensor/detail/sparse_base.hpp \
	tensor/detail/sparse_ops.hpp \
	tensor/detail/tensor_base.hpp \
	tensor/detail/tensor_matrix.hpp \
	tensor/detail/tensor_ops.hpp \
	tensor/detail/tensor_reshape.hpp \
	tensor/detail/tensor_slice.hpp \
	tensor/flags.h \
	tensor/gen.h \
	tensor/indices.h \
	tensor/io.h \
	tensor/jobs.h \
	tensor/linalg.h \
	tensor/map.h \
	tensor/numbers.h \
	tensor/rand.h \
	tensor/refcount.h \
	tensor/sdf.h \
	tensor/sparse.h \
	tensor/tensor.h \
	tensor/tensor_blas.h \
	tensor/tensor_lapack.h \
	tensor/tools.h \
	tensor/vector.h \
	tensor/fftw.h \
	$(top_builddir)/include/tensor/config.h
