
nobase_include_HEADERS = \
	tensor/arpack.h \
	tensor/detail/functional.h \
	tensor/detail/sparse_base.hpp \
	tensor/detail/sparse_ops.hpp \
	tensor/detail/tensor_ops.hpp \
	tensor/flags.h \
	tensor/gen.h \
	tensor/indices.h \
	tensor/io.h \
	tensor/jobs.h \
	tensor/linalg.h \
	tensor/map.h \
	tensor/numbers.h \
	tensor/rand.h \
	tensor/sdf.h \
	tensor/sparse.h \
	tensor/tensor.h \
	tensor/tensor_blas.h \
	tensor/tensor_lapack.h \
	tensor/tools.h \
	tensor/vector.h \
	tensor/fftw.h \
	$(top_builddir)/include/tensor/config.h
