add_subdirectory(tools)
add_subdirectory(rand)
add_subdirectory(indices)
add_subdirectory(sparse)
add_subdirectory(tensor)
add_subdirectory(compare)
add_subdirectory(generated)
add_subdirectory(linalg)
add_subdirectory(views)
add_subdirectory(sdf)

if(TENSOR_FFTW)
  add_subdirectory(fftw)
endif()

if(TENSOR_ARPACK)
  add_subdirectory(arpack)
endif()
